# project-reminder-bot

./: .gitignore  Cargo.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs
src/commands/: add_to_list.rs  clear_projects.rs  list.rs  mod.rs  ping.rs  projects.rs  remove_from_list.rs
